[package]
name = "gdrs"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
libflate = "1.2.0"
thiserror = "1.0.38"
gd_plist = { git = "https://github.com/Syudagye/gd-plist" }
serde = { version = "1.0", features = ["derive"] }
